# eim

./: .gitignore  README.html  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/app/: Dockerfile
.devcontainer/python3/: Dockerfile
.github/: pull_request_template.md
.github/workflows/: export-marp.yml  lambda_deploy.yml
app/: main.py
docs/: 20211122.html  20211122.md  CNAME  development.md  index.html
functions/: lambda_function.py  lambda_functions.py  lambda_handler.py  test_lambda_handler.py
presentation/: 20211122.html  20211122.md
provisioning/: package-lock.json  package.json
src/eim/: __init__.py  main.py
src/functions/: lambda_function.py  test_lambda_function.py
test/resources/: test_mail
