[tool.poetry]
name = "eim"
version = "0.1.0"
description = ""
authors = ["Masatoshi Namiki <masa1824@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.20.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
