[tool.poetry]
name = "eim"
version = "0.1.0"
description = ""
authors = ["Masatoshi Namiki <masa1824@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"


[tool.poetry.group.dev.dependencies]
boto3 = "^1.28.84"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
